# sts-transfer-detector

./: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml
configs/: config.yaml  config_gee.py
configs/preprocessing/: default.yaml
scripts/: 01_export_from_gee.py  02_preprocess.py  mask.py
src/predict/: predictions_with_land_mask.py
src/preprocess/: mask.py
src/preprocess/utils/: utils.py
src/sar_sts_detection/: config.py
src/sar_sts_detection/data/: preprocessing.py
src/sar_sts_detection/inference/: predictions.py  predictions_with_land_mask.py
src/sar_sts_detection/utils/: aisstream.py  export.py  gee.py  geo_utils.py  image_processing.py  masks.py  match_coordinates.py  plot.py  splitter.py  tiles.py
src/sts/inference/: predictions.py  predictions_with_land_mask.py
src/sts/utils/: aisstream.py  export.py  masks.py  match_coordinates.py  splitter.py
sts/: config.py
sts/utils/: __init__.py  data_utils.py  plot_utils.py
sts_transfer/: config.py
sts_transfer/utils/: __init__.py  data_utils.py
