[project]
name = "sar-sts-detection"
version = "0.1.0"
description = "Detect ship-to-ship cargo transfer using SAR imagery"
authors = [{ name = "Jordan Vinckevleugel" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "earthengine-api (>=1.5.20,<2.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "numpy (==2.2.6)",
    "geopy (>=2.4.1,<3.0.0)",
    "dash (==3.0.4)",
    "plotly (>=6.1.2,<7.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
    "geemap (>=0.35.3,<0.36.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = ["sts"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
